--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/node": "^7.16.8",
     "@babel/preset-env": "^7.16.11",
     "@faker-js/faker": "^6.1.1",
+    "@handlebars/allow-prototype-access": "^1.0.5",
     "axios": "^0.26.1",
     "babel-cli": "^6.26.0",
     "babel-loader": "^8.2.4",
@@ -27,9 +28,11 @@
     "body-parser": "^1.19.2",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-handlebars": "^6.0.5",
     "express-session": "^1.17.2",
     "express-validator": "^6.14.0",
     "fs-extra": "^10.0.1",
+    "handlebars": "^4.7.7",
     "json-stringify-safe": "^5.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.8",
